<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.v7.widget.CardView
                style="@style/Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onTempCardClick"
                app:cardBackgroundColor="@color/colorPrimary">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:baselineAligned="false"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tempValue"
                                style="@style/CardTitle"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:fontFamily="@font/ubuntu"
                                android:text="0.0 °C"
                                android:textAlignment="center"
                                android:textSize="24sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/tempCardTitle"
                                    style="@style/CardTitle"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:fontFamily="@font/ubuntu"
                                    android:padding="5dp"
                                    android:text="@string/temp_title" />

                            </LinearLayout>

                            <TextView
                                android:id="@+id/weatherInfo1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:padding="5dp"
                                android:text="@string/weather_info" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <View
                style="@style/Divider"
                android:layout_margin="25dp" />

            <android.support.v7.widget.CardView
                style="@style/Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onTempCardClick"
                app:cardBackgroundColor="@color/colorPrimary">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:baselineAligned="false"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/cloudImg"
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:layout_marginTop="10dp"
                                android:layout_weight="1"
                                android:padding="10dp"
                                app:srcCompat="@drawable/cloud" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/cloudCardTitle"
                                    style="@style/CardTitle"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:fontFamily="@font/ubuntu"
                                    android:padding="5dp"
                                    android:text="@string/cloud_title" />

                                <TextView
                                    android:id="@+id/cloudValue"
                                    style="@style/CardTitle"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:fontFamily="@font/ubuntu"
                                    android:padding="5dp"
                                    android:text="100%" />

                            </LinearLayout>

                            <TextView
                                android:id="@+id/weatherInfo2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:padding="5dp"
                                android:text="@string/weather_info" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <View
                style="@style/Divider"
                android:layout_margin="25dp" />

            <android.support.v7.widget.CardView
                style="@style/Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onTempCardClick"
                app:cardBackgroundColor="@color/colorPrimary">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:baselineAligned="false"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/windImg"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_marginLeft="10dp"
                                android:layout_weight="1"
                                android:padding="10dp"
                                app:srcCompat="@drawable/windarrow" />

                            <TextView
                                android:id="@+id/windDirection"
                                style="@style/CardTitle"
                                android:layout_width="wrap_content"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:fontFamily="@font/ubuntu"
                                android:padding="5dp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/windCardTitle"
                                    style="@style/CardTitle"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:fontFamily="@font/ubuntu"
                                    android:padding="5dp"
                                    android:text="@string/wind_title" />

                                <TextView
                                    android:id="@+id/windValue"
                                    style="@style/CardTitle"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:fontFamily="@font/ubuntu"
                                    android:padding="5dp"
                                    android:text="0.0 m/s" />

                            </LinearLayout>

                            <TextView
                                android:id="@+id/weatherInfo"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:padding="5dp"
                                android:text="@string/weather_info" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <View
                style="@style/Divider"
                android:layout_margin="25dp" />


        </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>